<resources>
    <string name="app_name">Shape App</string>
    <string name="select_shape">Select a Shape:</string>
    <string name="shape_circle">Circle</string>
    <string name="shape_square">Square</string>
    <string name="shape_triangle">Triangle</string>
    <string name="select_color">Select a Color:</string>
    <string name="color_red">Red</string>
    <string name="color_blue">Blue</string>
    <string name="color_green">Green</string>
    <string name="color_yellow">Yellow</string>
    <string name="submit">Submit</string>
    <string name="result_title">Here is your Shape</string>
    <string name="error_selection">Please select both a shape and a color.</string>
</resources>
